Added html index title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Even if I'm Italian, I don't like spaghetticode</title>
+    </head>
+    <body>
+    </body>
+</html>
