Added intro section

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
     <head>
         <title>Even if I'm Italian, I don't like spaghetticode</title>
+<style>
+ *{
+    background: #222036;
+    color: white;
+
+ }
+</style>
     </head>
     <body>
+        <h1>Welcome to my spaghetti blog.</h1>
+        <p>Together we will learn how to leave spaghetti in the kitchen, away from the code!</p>
+        <div>
+            <H2>Why I started this blog.</h2>
+            <ul>
+                <li>I don't want to see spaghetti in codebases.</li>
+                <li>Someone may needs to learn <strong>how</strong> to think.</li>
+                <li>Once you know how to think, you'll get better at coding.</li>
+            </ul>
+        </div>
     </body>
 </html>
