added low-level section

--- a/index.html
+++ b/index.html
@@ -2,24 +2,65 @@
 <html lang=en>
     <head>
         <title>Even if I'm Italian, I don't like spaghetticode</title>
-<style>
- *{
-    background: #222036;
-    color: white;
-
- }
-</style>
+        <style>
+            *{
+                background: #222036;
+                color: white;
+            }
+            body {
+                margin: 0 50% 0 5%;
+                text-align: justify;
+            }
+        </style>
     </head>
+
     <body>
-        <h1>Welcome to my spaghetti blog.</h1>
+        <p>Still improving this—typos and spaghetti flow ahead. Read at your own risk!</p>
+        <h1>Welcome to my Spaghetti-Free Blog.</h1>
         <p>Together we will learn how to leave spaghetti in the kitchen, away from the code!</p>
         <div>
-            <H2>Why I started this blog.</h2>
+            <h2>Why I Started This Blog.</h2>
             <ul>
-                <li>I don't want to see spaghetti in codebases.</li>
-                <li>Someone may needs to learn <strong>how</strong> to think.</li>
-                <li>Once you know how to think, you'll get better at coding.</li>
+                <li>Because seeing too much spaghetti-code physically hurts me.</li>
+                <li>Because some devs never learned <strong>how</strong> to think properly, only how to write code.</li>
+                <li>Because once you know how to think, you naturally become a better developer.</li>
+            </ul>
+
+            <h2>What You'll Learn Here.</h2>
+            <ul>
+                <li>The fundamentals of low-level programming in C.</li>
+                <li>The **real** core of Object-Oriented-Programming (not just "write classes").</li>
+                <li>The power of Design-Patterns and when to actually use them.</li>
+                <li>How to think <strong>actively</strong> and solve problems, not just follow tutorials</li>
             </ul>
         </div>
+
+        <div>
+            <h2>The Fundamentals Of Low-Level Programming in C</h2>
+            <p>
+                Even though C is not very popular in these days it's still a good place to start, it teaches you
+                how a computer works, how to manage memory and raw performance.
+            </p>
+            <h3>
+                Variables Type.
+            </h3>
+            <h4>Preface.</h4>
+            <p>Data in computer science is represented by sequences of 0 and 1, a sequence made of one element is called a bit and eight bits made up a byte. That said we can start.</p>
+            <p>
+            Standard C89 libraries supports these variable types:
+            <ul>
+                <li>short</li>
+                <li>int</li>
+                <li>char</li>
+                <li>long</li>
+                <li>float</li>
+                <li>double</li>
+            </ul>
+            Every of these type excpet <strong>char</strong> can be represented with or without sign, this means that if you don't specify it, they can also store negative numbers.
+            short, int and long all represent integers but with a neat difference. short uses 16 bits (2 bytes), storing values from <strong>0</strong> to <strong>65,535</strong> when <strong>unsigned</strong> 
+            when you don't use the <strong>unsigned</strong> keyword.
+            </p>
+        </div>
     </body>
+
 </html>
